--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@raydium-io/raydium-sdk-v2",
-  "version": "0.2.30-alpha",
+  "name": "@heymike/raydium-sdk-v2",
+  "version": "0.2.30-alpha-heymike-1",
   "description": "An SDK for building applications on top of Raydium.",
   "license": "GPL-3.0",
   "main": "./lib/index.js",
